<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.FragSensors">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerSensors"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingHorizontal="4dp"
            android:paddingVertical="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/loadingSensors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabSensorAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:contentDescription="@string/add"
            android:focusable="true"
            android:src="@drawable/baseline_add_24"
            app:fabCustomSize="56dp"
            app:icon="@drawable/baseline_add_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabSensorEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:contentDescription="@string/edit"
            android:focusable="true"
            android:src="@drawable/baseline_edit_24"
            android:visibility="gone"
            app:fabCustomSize="40dp"
            app:layout_constraintBottom_toTopOf="@+id/fabSensorAdd"
            app:layout_constraintEnd_toEndOf="@+id/fabSensorAdd"
            app:layout_constraintStart_toStartOf="@+id/fabSensorAdd"
            tools:visibility="visible" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabSensorRemove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:contentDescription="@string/remove"
            android:focusable="true"
            android:src="@drawable/baseline_delete_24"
            android:visibility="gone"
            app:fabCustomSize="40dp"
            app:layout_constraintBottom_toTopOf="@+id/fabSensorEdit"
            app:layout_constraintEnd_toEndOf="@+id/fabSensorEdit"
            app:layout_constraintStart_toStartOf="@+id/fabSensorEdit"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>